# tool-kit

./: AirPassengersDF.xlsx  LICENSE  README.md  animation.py  auto.ipynb  eda.ipynb  eva.ipynb  excelforecaster.xlsx  experiment.ipynb  hmmm.ipynb  learn_spark.ipynb  lol.txt  new.ipynb  new.ww.ipynb  pyproject.toml  run_uv.bat  test.py  test2.py  walkthrough.ipynb  yay.ipynb
src/tool_kit/: __init__.py  yayay.txt
