[tool.poetry]
name = "tool-kit"
version = "0.1.0"
description = ""
authors = ["Wes Stone <wesstone@vt.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
statsforecast = "^1.7.5"
utilsforecast = "^0.1.12"
pandas = "^2.2.2"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
scipy = "^1.14.0"
statsmodels = "^0.14.2"
pymannkendall = "^1.4.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
