[project]
name = "tool-kit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "pandas>=2.2.2",
    "yfinance>=0.2.43",
    "mlforecast>=0.13.4",
    "pytz>=2024.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.9.2",
    "numpy>=2.0.1",
    "tabulate>=0.9.0",
    "numba>=0.60.0",
    "jupyter>=1.0.0",
    "llvmlite>=0.43.0",
    "statsforecast>=1.7.6",
    "utilsforecast>=0.2.3",
    "xgboost>=2.1.1",
    "scikit-learn>=1.5.1",
    "catboost>=1.2.5",
    "polars>=1.6.0",
    "autots>=0.6.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
